Dataset.limit resolves #87